Bug 1676970 - Always consider text controls has independent selection r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D97720